--- a/src/main/webapp/s19.html
+++ b/src/main/webapp/s19.html
@@ -12,10 +12,11 @@
     </p>
 
     <!-- TBD: action not implemented -->
-    <form action="/comment" method="post">
+    <form action="/comment" method="get">
         <div>
             <label for="name">Name:</label>
-            <input type="text" id="name" name="sender">
+            <input type="text" id="name" name="sender"
+            	value=ciao required maxlength=5>
         </div>
         <div>
             <label for="msg">Message:</label>
