--- a/src/main/webapp/s22.html
+++ b/src/main/webapp/s22.html
@@ -14,7 +14,7 @@
     <!-- TBD: action not implemented -->
     <form action="/stuff">
         <div>
-            <input type="radio" id="favJ" name="fav" value="Java" checked />
+            <input type="radio" id="favJ" name="fav" value="Java"  />
             <label for="favJ">Java</label>
             <input type="radio" id="favPy" name="fav" value="Python" />
             <label for="favPy">Python</label>
