--- a/src/main/webapp/s35.html
+++ b/src/main/webapp/s35.html
@@ -18,7 +18,7 @@
 
         // string
         let name = 'Bob';
-        target.value += 'hello ' + name + '\n';
+        target.value += 'hello ' + name + '\n'; // il backslash con n (\n) vuol dire andare a capo
 
         // number
         let value = 42;
@@ -31,7 +31,7 @@
         // object
         let dog = { name : 'Zip', breed : 'Alsatian' };
         target.value += dog + '\n';
-        target.value += dog.name + ' is an ' + dog.breed + '\n';
+        target.value += dog.name + ' is an ' + dog.breed + '\n'; 
         
         // array is kind of object
         let data = [ 1, 'Tom', false ];
