--- a/src/main/webapp/s41.html
+++ b/src/main/webapp/s41.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -18,10 +18,10 @@
 
         let data = [ 1, 'hello', [ true, 42.24 ] ];
         target.value += data + '\n';
-        console.log(data.length);
+        console.log(data.length, data);
 
         console.log(data[1], data[2][1]);
-        data[2] = false;
+        data[2] = false; 
 
         for (let i = 0; i < data.length; i++) {
             console.log(data[i]);
